SUBDIRS = 

# Execute Programs
# noinst_PROGRAMS =
#bin_PROGRAMS = foo
#foo_SOURCES = xx.cpp
#foo_LDADD =
#foo_LDFLAGS =
#foo_DEPENDENCIES =

# Static Library
#lib_LIBRARIES = libleetcode.a
noinst_LIBRARIES = libleetcode.a
libleetcode_a_SOURCES = Tree.cpp String.cpp Number.cpp
#leetcode_a_LDADD =
#leetcode_a_LIBADD = 
#leetcode_a_LDFLAGS = 

# header files
include_HEADERS = Tree.h String.h Number.h

# data files
#data_DATA = data1 data2
