SUBDIRS = 
# Execute Programs
#bin_PROGRAMS = testLeetCode
noinst_PROGRAMS = testLeetCode
testLeetCode_SOURCES = main.cpp \
		testString.cpp \
		testNumber.cpp \
		testTree.cpp \
		testMinStack.cpp \
		testArray.cpp \
		testList.cpp

testLeetCode_CPPFLAGS = -I./include -I../src
testLeetCode_LDADD = ../src/libleetcode.a
#testLeetCode_LDFLAGS = 
#testLeetCode_DEPENDENCIES =

# Static Library
#lib_LIBRARIES = 
#leetcode_a_SOURCES =
#leetcode_a_LDADD =
#leetcode_a_LIBADD = 
#leetcode_a_LDFLAGS = 

# header files
include_HEADERS = ./include

# data files
#data_DATA = data1 data2
